# Idolmancer

./: PLAN.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  transition_engine.html
.github/workflows/: ci.yml
apps/shell/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/shell/src/: App.tsx  main.tsx  registry.ts
apps/shell/src/components/: Layout.tsx  Sidebar.tsx
apps/shell/src/pages/: Home.tsx  SettingsPage.tsx  ToolPage.tsx
chordgen/: index.html  package-lock.json  package.json  tsconfig.json
chordgen/src/: MusicTheoryApp.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
tools/bpm-ms/: package.json
tools/bpm-ms/src/: BpmMs.tsx  index.ts  manifest.ts
tools/chordgen/: package.json
tools/chordgen/src/: MusicTheoryApp.tsx  index.ts  manifest.ts
tools/eq-preview/: package.json
tools/eq-preview/src/: EqPreview.tsx  index.ts  manifest.ts
tools/harmonics/: package.json
tools/harmonics/src/: Harmonics.tsx  index.ts  manifest.ts
tools/spectrum/: package.json
tools/spectrum/src/: Spectrum.tsx  index.ts  manifest.ts
tools/transition-engine/: package.json
tools/transition-engine/src/: TransitionEngine.tsx  engine.test.ts  engine.ts  index.ts  manifest.ts
tools/waveform/: package.json
tools/waveform/src/: Waveform.tsx  index.ts  manifest.ts
