[package]
name = "idolmancer"
version = "0.1.0"
description = "Idolmancer — music composition and theory workbench"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Enabled by `tauri dev`/`tauri build`; keeps `cargo` quiet otherwise.
custom-protocol = ["tauri/custom-protocol"]
